# high-five-recognition-system

./: README.md  generate_qr_codes.py  pyproject.toml
.streamlit/: config.toml  secrets.toml.example
data/: highfive_data.enc
streamlit-app/: app.py  csv_client.py  encrypted_csv_client.py  github_storage.py
