[project]
name = "high-five-recognition-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=43.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "qrcode>=8.2",
    "requests>=2.32.0",
    "streamlit>=1.51.0",
]
